# calculator

./: .cproject  .gitignore  .project  CMakeLists.txt  Conversion.c  Makefile  README.md  Signal_Process.c  calculator.cbp  calculator.h  conversion.c  main.c  show_Bin_window.c  show_Dec_window.c  show_Hex_window.c  show_Oct_window.c  signal_process.c
.github/workflows/: BuildAndRelease.yml
include/: calculator.h  test_calculator.h
src/: calculator.mo  conversion.c  main.c  signal_process.c
test/: test_calculator.c
